// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast snapshot Render error toast 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
    id="toast-2"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-right"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error Toastify__toast--close-on-click Toastify--animate Toastify__bounce-enter--top-right"
        data-in="true"
        id="toast-2"
        style="background-color: rgb(253, 232, 233); color: rgb(38, 38, 38); font-weight: 600; font-size: 14px;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div
            class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
          >
            <svg
              fill="none"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.72494 17.5001H16.2749C17.5583 17.5001 18.3583 16.1084 17.7166 15.0001L11.4416 4.1584C10.7999 3.05007 9.19994 3.05007 8.55827 4.1584L2.28327 15.0001C1.6416 16.1084 2.4416 17.5001 3.72494 17.5001ZM9.99994 11.6667C9.5416 11.6667 9.1666 11.2917 9.1666 10.8334V9.16673C9.1666 8.7084 9.5416 8.3334 9.99994 8.3334C10.4583 8.3334 10.8333 8.7084 10.8333 9.16673V10.8334C10.8333 11.2917 10.4583 11.6667 9.99994 11.6667ZM10.8333 15.0001H9.1666V13.3334H10.8333V15.0001Z"
                fill="#ED1C24"
              />
            </svg>
          </div>
          <div>
            Toast Error!
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <button
            class="cursor-pointer"
          >
            <svg
              fill="none"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.33317 15.8334L4.1665 14.6667L8.83317 10.0001L4.1665 5.33341L5.33317 4.16675L9.99984 8.83341L14.6665 4.16675L15.8332 5.33341L11.1665 10.0001L15.8332 14.6667L14.6665 15.8334L9.99984 11.1667L5.33317 15.8334Z"
                fill="#1D1B20"
              />
            </svg>
          </button>
        </div>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="false"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--error"
          />
          <div
            aria-hidden="false"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--error"
            role="progressbar"
            style="animation-duration: 5000ms; animation-play-state: paused;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast snapshot Render success toast 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
    id="toast-1"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-right"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success Toastify__toast--close-on-click Toastify--animate Toastify__bounce-enter--top-right"
        data-in="true"
        id="toast-1"
        style="background-color: rgb(230, 253, 241); color: rgb(38, 38, 38); font-weight: 600; font-size: 14px;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div
            class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
          >
            <svg
              fill="none"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.8333 2.5H4.16667C3.25 2.5 2.5 3.25 2.5 4.16667V15.8333C2.5 16.75 3.25 17.5 4.16667 17.5H15.8333C16.75 17.5 17.5 16.75 17.5 15.8333V4.16667C17.5 3.25 16.75 2.5 15.8333 2.5ZM8.925 13.575C8.6 13.9 8.075 13.9 7.75 13.575L4.75833 10.5833C4.43333 10.2583 4.43333 9.73333 4.75833 9.40833C5.08333 9.08333 5.60833 9.08333 5.93333 9.40833L8.33333 11.8083L14.0667 6.075C14.3917 5.75 14.9167 5.75 15.2417 6.075C15.5667 6.4 15.5667 6.925 15.2417 7.25L8.925 13.575Z"
                fill="#00E676"
              />
            </svg>
          </div>
          <div>
            Toast Success!
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <button
            class="cursor-pointer"
          >
            <svg
              fill="none"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.33317 15.8334L4.1665 14.6667L8.83317 10.0001L4.1665 5.33341L5.33317 4.16675L9.99984 8.83341L14.6665 4.16675L15.8332 5.33341L11.1665 10.0001L15.8332 14.6667L14.6665 15.8334L9.99984 11.1667L5.33317 15.8334Z"
                fill="#1D1B20"
              />
            </svg>
          </button>
        </div>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="false"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--success"
          />
          <div
            aria-hidden="false"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--success"
            role="progressbar"
            style="animation-duration: 5000ms; animation-play-state: paused;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
